--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "dpsoft/parsianPayment",
+    "name": "dpsoft/parsian-payment",
     "description": "Parsian bank payment",
     "type": "library",
     "license": "GPL-3.0-only / GPL-3.0-or-later",
