--- a/composer.json
+++ b/composer.json
@@ -19,10 +19,10 @@
         }
     },
     "require": {
-        "php": "^7.1",
+        "php": "^7.4 || ^8.0",
         "ext-soap": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.5.6"
+        "phpunit/phpunit": "^9.0"
     }
 }
